<resources>
    <string name="app_name">Quiz App</string>
    <string name="action_settings">Settings</string>
    <string name="question_1">Question 1: Qual o nome do doce da versão mais recente do android, o Android \'\'O\'\'?</string>
    <string name="answer_question_1">Oreo</string>

    <string name="question_2">Question 2: Quais das opções abaixo foram nomes de versões do android?</string>
    <string name="cupcake">Cupcake</string>
    <string name="donut">Donut</string>
    <string name="brigadeiro">Brigadeiro</string>
    <string name="chocolate">Chocolate</string>
    <string name="ice_cream_sandwich">Ice Cream Sandwich</string>
    <string name="pacoca">Paçoca</string>
    <string-array name="answer_question_2">
        <item>@string/cupcake</item>
        <item>@string/donut</item>
        <item>@string/ice_cream_sandwich</item>
    </string-array>

    <string name="question_3">Question 3: Qual o nome do robô mascote do android?</string>
    <string name="bugdroid">Bugdroid</string>
    <string name="eve">Eve</string>
    <string name="astro_boy">Astro Boy</string>
    <string name="answer_question_3">@string/bugdroid</string>

    <string name="question_4">Question 4: O primeiro aparelho com o sistema Android, o HTC Dream, foi lançado em 22 de outubro de qual ano, nos Estados Unidos?</string>
    <string name="_2006">2006</string>
    <string name="_2007">2007</string>
    <string name="_2008">2008</string>
    <string name="_2009">2009</string>
    <string name="answer_question_4">@string/_2008</string>

    <string name="question1_validate">Question 1 precisa ser respondida.\n</string>
    <string name="question2_validate">Question 2 Selecione pelo menos uma opção.\n</string>
    <string name="question3_validate">Question 3 Selecione uma opção.\n</string>
    <string name="question4_validate">Question 4 Selecione uma opção.\n</string>
</resources>
